@@ -620,7 +620,7 @@ do_friend (tree ctype, tree declarator, tree decl,
 		 declaration, the program is ill-formed.  */
 	      tree t = lookup_name_innermost_nonclass_level (DECL_NAME (decl));
 	      if (t)
-		decl = pushdecl_maybe_friend (decl, /*is_friend=*/true);
+		decl = pushdecl (decl, /*is_friend=*/true);
 	      else
 		{
 		  error ("friend declaration %qD in local class without "
